
name:                pycket-benchmarks
version:             0.1.0.0
author:              Sam Tobin-Hochstadt
maintainer:          
build-type:          Simple
cabal-version:       >=1.10

executable run-pycket-benchmarks
  main-is:             run-benchmark.hs
  other-extensions:    CPP, BangPatterns, DeriveGeneric
  build-depends:       base >=4.6, deepseq >=1.3, time >=1.4, containers >=0.5, process >= 1.1, directory,
                       random >=1.0,
                       mtl >=2.1,
                       data-default >=0.5.3,
                       GenericPretty >=1.2 && <1.3, 
                       test-framework >=0.8 && <0.9, test-framework-hunit >=0.3 && <0.4, HUnit >=1.2 && <1.3,
                       hsbencher >= 1.19.1.1,
                       hsbencher-fusion >= 0.1
  default-language:    Haskell2010
  ghc-options: -threaded
